fix overflowing text in signing modal for icelandic lang in mobile signview

--- a/frontend/app/less/signview.less
+++ b/frontend/app/less/signview.less
@@ -719,6 +719,7 @@
         line-height: 72px;
         padding-bottom: 9px;
         padding-left: 92px;
+        white-space: normal;
 
         .spinner {
           left: 23px;
